# pytracingx

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.qoder/: settings.json
.qoder/skills/bump-version/: SKILL.md
.qoder/skills/verify/: SKILL.md
benchmarks/: README.md  bench_concurrent.py  bench_hot_path.py
examples/: demo.py  fastapi_middleware.py  traces_to_xtrace.py
python/pytracingx/: __init__.py  _native.pyi  logging.py
rust/src/: config.rs  context.rs  error.rs  exporters.rs  lib.rs  logs.rs  metrics.rs  runtime.rs  sls.rs  sls_log.rs  traces.rs
tests/: conftest.py  test_config.py  test_logging_bridge.py  test_runtime.py
