[package]
name = "pytracingx"
version = "0.1.2"
edition = "2024"
description = "Rust + OpenTelemetry powered Python bindings for traces, metrics, and logs (SLS-first)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-org/pytracingx"

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.29", features = [
    "extension-module",
    "abi3-py39",
    "anyhow",
] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
anyhow = { version = "1", features = ["backtrace"] }
opentelemetry = { version = "0.32", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.32", features = [
    "rt-tokio",
    "trace",
    "metrics",
    "logs",
    "experimental_trace_batch_span_processor_with_async_runtime",
    "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "metrics",
    "logs",
    "grpc-tonic",
    "tls-ring",
    "tls-roots",
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
opentelemetry-semantic-conventions = "0.32"
tonic = { version = "0.14", features = ["tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "ansi",
    "registry",
    "std",
    "json",
] }
tracing-opentelemetry = "0.33"
opentelemetry-appender-tracing = "0.32"
once_cell = "1"
parking_lot = "0.12"
url = "2"
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
hostname = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
pythonize = "0.29"
aliyun-log-rust-sdk = "0.3.0"
aliyun-log-sdk-protobuf = "0.1.1"
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
