[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pytracingx"
version = "0.1.2"
description = "Rust + OpenTelemetry powered Python bindings for traces, metrics, and logs (SLS-first)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pytracingx authors" }]
keywords = [
    "opentelemetry",
    "tracing",
    "metrics",
    "logs",
    "sls",
    "aliyun",
    "rust",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/smallsunsun1/pytracingx"
Repository = "https://github.com/smallsunsun1/pytracingx"
Issues = "https://github.com/smallsunsun1/pytracingx/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.maturin]
module-name = "pytracingx._native"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["python"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["E501"]
